--- a/estilos.css
+++ b/estilos.css
@@ -6,7 +6,21 @@ body{
     font-family: 'Rubik', sans-serif;
 }
 
+.logo{
+    display: flex;
+    justify-content: flex-start;
+}
 
+.navegacion{
+    display: flex;
+    justify-content: center; 
+}
+
+.menu li{
+    display: flex;
+    justify-content: center;
+    padding: 5px;
+}
 
 .imagen-portada{
     width:100%;
