--- a/estilos.css
+++ b/estilos.css
@@ -8,19 +8,20 @@ body{
 
 .logo{
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
 }
 
-.navegacion{
+.navegacion {
     display: flex;
-    justify-content: center; 
+    justify-content: center;
+   
 }
 
 .menu li{
     display: flex;
     justify-content: center;
-    padding: 5px;
 }
+
 
 .imagen-portada{
     width:100%;
@@ -56,18 +57,6 @@ body{
     width: 100%;
 }
 
-.navegacion{
-    display: flex;
-    justify-content: center; 
-}
-
-.menu li{
-    display: flex;
-    justify-content: center;
-    padding: 5px;
-}
-
-
 h1{
    
     text-align: center;
@@ -80,17 +69,21 @@ h2{
 }
 
 
-
 p, table {
     color:aliceblue;
     text-align: center;
     
 }
+
 a{
     text-decoration: none;
     color: aliceblue;
 }
 
+.posiciones-femenino{
+    display: flex;
+    justify-content: center;
+}
 
 .posiciones-masculino{
     display: inline-block;
@@ -146,6 +139,7 @@ input{
         grid-template-columns: 100%;
         grid-template-rows: auto auto auto auto auto auto;
         grid-template-areas: 
+      
         "navegacion"
         "portada"
         "banner"
@@ -177,6 +171,25 @@ input{
     /* INDEX MEDIA TABLET */
 
     @media screen and (min-width:768px){
+        
+        .contenedor-logo{
+            display: grid;
+            grid-template-columns: 20% 80%;
+            grid-template-rows: 80px;
+        }
+
+        .menu li {
+            display: inline-block;
+            position: relative;
+            padding: 10px;
+            align-items: center;
+        }
+
+        .navegacion{
+            justify-content: flex-end;
+        }
+
+
         .contenedor{
         grid-template-columns: 100%;
         grid-template-areas: 
@@ -206,17 +219,6 @@ input{
         }
         .footer{
             grid-area: redes;
-        }
-        .navegacion{
-            display: flex;
-            justify-content: center;
-            
-        }
-        
-        .menu li{
-            display: flex;
-            justify-content: center;
-            padding: 10px;
         }
         
     }
@@ -224,6 +226,33 @@ input{
     /* INDEX MEDIA DESKTOP */
 
     @media screen and (min-width:1024px){
+
+        .menu li {
+            display: inline-block;
+            position: relative;
+            padding: 10px;
+            flex-direction: end;
+        }
+
+        .menu li {
+            display: inline-block;
+            position: relative;
+            padding: 10px;
+            align-items: center;
+        }
+
+        .navegacion{
+            justify-content: flex-end;
+        }
+
+        .contenedor-logo{
+            display: grid;
+            grid-template-columns: 20% 80%;
+            grid-template-rows: 80px;
+            align-items: center;
+            
+        }
+        
         .contenedor{
         grid-template-columns: 100%;
         grid-template-areas: 
@@ -254,23 +283,7 @@ input{
         .footer{
             grid-area: redes;
         }
-        .navegacion{
-            display: flex;
-            align-items: center;
-            
-        }
-        
-        .menu li{
-            display: flex;
-            align-items: center;
-            padding: 10px;
-        }
-        
-    }
-        
-
-
-
+ 
 
     /* FEMENINO GRID AREAS*/
 
