--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
 
 body{
-    background-color:black;
+    background-image: linear-gradient(black,grey);
     font-family: 'Montserrat Alternates', sans-serif;
     font-family: 'Poppins', sans-serif;
     font-family: 'Rubik', sans-serif;
