--- a/estilos.css
+++ b/estilos.css
@@ -20,6 +20,7 @@ body{
     display: flex;
     justify-content: center;
     padding: 5px;
+    transform: translate(-20px);
 }
 
 .imagen-portada{
@@ -176,6 +177,7 @@ input{
        .navegacion{
            display: flex; 
            justify-content: flex-end;
+           transform: translate(0, 10px, 0, 0);
        }
 
         
@@ -228,6 +230,10 @@ input{
         .navegacion{
             display: flex; 
             justify-content: flex-end;
+        }
+
+        .menu li{
+        transform: translate(-20px);
         }
  
        
