--- a/estilos.css
+++ b/estilos.css
@@ -6,7 +6,7 @@ body{
     font-family: 'Rubik', sans-serif;
 }
 
-.logo{
+/*.logo{
     display: flex;
     justify-content: flex-start;
     position: relative;
@@ -21,10 +21,9 @@ body{
 }
 
 .menu li{
-    
-    transform: translate(-20px);
+        transform: translate(-20px);
     }
-
+*/
 .imagen-portada{
     width:100%;
     height:100%;
