--- a/estilos.css
+++ b/estilos.css
@@ -14,7 +14,10 @@ body{
 }
 
 .navegacion{
-   
+    display: inline;
+    position: absolute;
+    justify-content: flex-end;
+    
 }
 
 .menu li{
