--- a/estilos.css
+++ b/estilos.css
@@ -18,6 +18,16 @@ body{
     }
 */
 
+.navegacion{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.menu li :hover {
+    background-color: white;
+    color: black;
+}
+
 .imagen-portada{
     width:100%;
     height:100%;
