--- a/estilos.css
+++ b/estilos.css
@@ -21,12 +21,14 @@ body{
 .navegacion{
     display: flex;
     justify-content: flex-end;
+    background-color: black;
 }
 
-.menu li :hover {
-    background-color: white;
-    color: black;
+li{
+    color: aliceblue;
 }
+
+
 
 .imagen-portada{
     width:100%;
