--- a/estilos.css
+++ b/estilos.css
@@ -25,12 +25,15 @@ body{
     
 }
 
-
-
-.nav-contenedor{
+.navbar{
     background-color: black;
     color:aliceblue;
 }
+
+
+
+
+
 
 
 .imagen-portada{
