--- a/estilos.css
+++ b/estilos.css
@@ -40,30 +40,6 @@ body{
     justify-content: center;
 }
 
-.h2-femenino{
-    display: flex;
-    justify-content: center;
-    
-}
-
-.h2-masculino{
-    display: flex;
-    justify-content: center;
-}
-
-.imagen-femenino{
-    width: 100%;
-}
-
-.imagen-masculino{
-    width: 100%;
-}
-
-.contenedor-posiciones-femenino{
-    display: grid;
-    justify-content: center;
-}
-
 h1{
    
     text-align: center;
@@ -75,24 +51,17 @@ h2{
     color: aliceblue;
 }
 
-
-
 p, table {
     color:aliceblue;
     text-align: center;
     
 }
+
 a{
     text-decoration: none;
     color: aliceblue;
 }
 
-
-.posiciones-masculino{
-    display: inline-block;
-    position: relative;
-    margin-left: 550px;
-}
 footer{
     color:aliceblue;
     text-align: center;
@@ -129,7 +98,39 @@ input{
     width: 100%;
 }
 
+.h2-femenino{
+    display: flex;
+    justify-content: center;
+    
+}
+
+.contenedor-posiciones-femenino{
+    display: grid;
+    justify-content: center;
+}
+
+/* CSS MASCULINO */
+
+.h2-masculino{
+    display: flex;
+    justify-content: center;
+}
+
+.imagen-masculino{
+    width: 100%;
+}
+
+.posiciones-masculino{
+    display: inline-block;
+    position: relative;
+    margin-left: 550px;
+}
    
+
+
+
+
+
 
 /*INDEX GRID AREA*/
 
@@ -359,7 +360,7 @@ input{
             flex-direction: row;
             justify-content: flex-end;
         }
-        
+
         .menu li{
             display: inline-block;
         }
