--- a/estilos.css
+++ b/estilos.css
@@ -11,7 +11,6 @@ body{
     justify-content: center;
 }
 
-
 .navegacion{
     display: flex;
     flex-direction: column;
@@ -124,6 +123,11 @@ input{
     display: inline-block;
     position: relative;
     margin-left: 550px;
+}
+
+.contenedor-posiciones-femenino{
+    display: grid;
+    justify-content: center;
 }
    
 
