--- a/estilos.css
+++ b/estilos.css
@@ -75,13 +75,14 @@ footer{
 .button{
     width: 20px;
 }
+
 input{
    width: 300px;
   }
+
 .mensaje{
     height:100px;
 }
-
 
 .redes{
     display: inline;
@@ -100,11 +101,10 @@ input{
 .h2-femenino{
     display: flex;
     justify-content: center;
-    
 }
 
 .contenedor-posiciones-femenino{
-    display: grid;
+    display: flex;
     justify-content: center;
 }
 
@@ -119,18 +119,11 @@ input{
     width: 100%;
 }
 
-
 .contenedor-posiciones-masculino{
-    display: grid;
+    display: flex;
     justify-content: center;
 }
    
-
-
-
-
-
-
 /*INDEX GRID AREA*/
 
     .contenedor{
@@ -181,8 +174,6 @@ input{
            flex-direction: row;
            justify-content: flex-end;
        }
-
-
        
         .contenedor{
         grid-template-columns: 100%;
@@ -309,10 +300,6 @@ input{
         
         
     }
-        
-
-
-
 
     /* FEMENINO GRID AREAS*/
 
@@ -427,4 +414,119 @@ input{
             grid-area: redes;
         }
     }
+
+     /* MASCULINO GRID AREAS
+
+     .posiciones-femenino{
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: auto auto auto auto auto;
+        grid-template-areas:
+        "navegacion-femenino"
+        "intro-femenino"
+        "portada-femenino"
+        "posiciones-femenino"
+        "redes"
+        ;
+    }
+
+    .header-femenino{
+        grid-area: navegacion;
+    }
+    .main-femenino{
+        grid-area: intro-femenino;
+    }
+    .main-femenino{
+        grid-area: portada-femenino;
+    }
+    .main-femenino{
+        grid-area: posiciones-femenino;
+    }
+    .footer{
+        grid-area: redes;
+    }
+
+    /* FEMENINO MEDIA TABLET 
+
+    @media screen and (min-width:768px){
+        .contenedor-logo{
+            display: grid;
+            grid-template-columns: 20% 80%;
+            grid-template-rows: 80%;
+        }
+
+        .navegacion{
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-end;
+        }
+
+        .menu li{
+            display: inline-block;
+        }
+        
+        .contenedor-femenino{
+        grid-template-columns: 100%;
+        grid-template-areas: 
+        "navegacion"
+        "intro-femenino"
+        "portada-femenino"
+        "posiciones-femenino"
+        "redes-femenino"
+        ;
+        }
+        
+        .header-femenino{
+            grid-area: navegacion;
+        }
+        .main-femenino{
+            grid-area: intro-femenino;
+        }
+        .main-femenino{
+            grid-area: portada-femenino;
+        }
+        .main-femenino{
+            grid-area: posiciones-femenino; 
+        }
+        .footer-femenino{
+            grid-area: redes;
+        }
+        
+        .portada-femenino:hover{
+            filter: opacity(0.5);
+        }
+    }
+
+
+/*FEMENINO MEDIA DESKTOP 
+
+    @media screen and (min-width:1024px){
+        .contenedor-femenino{
+        grid-template-columns: 100%;
+        grid-template-areas: 
+        "navegacion"
+        "intro-femenino"
+        "portada-femenino"
+        "posiciones-femenino"
+        "redes-femenino"
+        ;
+        }
+        
+        .header-femenino{
+            grid-area: navegacion;
+        }
+        .main-femenino{
+            grid-area: intro-femenino;
+        }
+        .main-femenino{
+            grid-area: portada-femenino;
+        }
+        .main-femenino{
+            grid-area: posiciones-femenino; 
+        }
+        .footer-femenino{
+            grid-area: redes;
+        }
+    }
     
+    */
